feat: Update swagger focumentation
