# product-service/swagger.json
@@ -4,8 +4,8 @@
     "version": "1.0.0",
     "description": "Product Service for Nodejs in AWS course"
   },
-  "host": "rpjepkiu2b.execute-api.eu-west-1.amazonaws.com",
-  "basePath": "/prod",
+  "host": "fgkaarac1j.execute-api.eu-west-1.amazonaws.com",
+  "basePath": "/dev",
   "swagger": "2.0",
   "paths": {
     "/products": {
@@ -29,6 +29,74 @@
             "schema": {
               "$ref": "#/definitions/Error"
             }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      },
+      "post": {
+        "description": "Create product",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "product",
+            "description": "The product to create",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "required": [
+                "title",
+                "count",
+                "price"
+              ],
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "default": "Christmas Product 1"
+                },
+                "count": {
+                  "type": "number",
+                  "default": 5
+                },
+                "price": {
+                  "type": "number",
+                  "default": 17
+                },
+                "src": {
+                  "type": "string",
+                  "default": "https://m.hindustantimes.com/rf/image_size_960x540/HT/p2/2017/12/24/Pictures/_c0e2aa88-e88e-11e7-b094-c21f82b60b0b.jpg"
+                },
+                "description": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Product"
+            }
+          },
+          "400": {
+            "description": "Product is not valid",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "500": {
+            "description": "Something went wrong. Please try again later",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
           }
         }
       }
@@ -45,7 +113,6 @@
             "description": "Product id",
             "required": true,
             "type": "string",
-            "default": "7567ec4b-b10c-48c5-9345-fc73c48a80aa",
             "in": "path"
           }
         ],
